# mox-worker

./: .gitignore  Cargo.toml  Dockerfile  cfg.yaml  log4rs.yaml
src/: main.rs
src/gsc/: debug_until.rs  error.rs  mod.rs  phone_until.rs  time_until.rs
src/gsc/concurrency/: transaction.rs
src/gsc/config/: file_config.rs  mod.rs  system_config.rs
src/gsc/data_source/: account.rs  config_source.rs  mod.rs  personal.rs  source_service.rs
src/gsc/debug/: helpers.rs
src/gsc/event/: mod.rs  pub_sub.rs
src/gsc/mdl/: minio.rs  mod.rs  redis.rs
src/mox/: account.rs  appointment.rs  birth.rs  errors.md  gender.rs  helper.rs  mod.rs  offices_assign.rs  personal.rs
src/third/: cloud_code.rs  ddd_code.rs  identifying_captcha_performance.rs  interface_identifying_captcha.rs  interface_ip_pool.rs  ipidea.rs  mod.rs  rox_labs.rs  sb_code.rs
src/website/: http_until.rs  mod.rs  model.rs  mox.rs  mox_client.rs  mox_countries.rs  param_crypto.rs  proto.rs  sec_until.rs
