[package]
name = "worker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.116"
serde = { version = "1.0.199", features = ["derive"] }
reqwest = { version = "0.12.4", features = ["json", "socks", "gzip", "brotli", "deflate", "zstd"] }
# reqwest = { version = "0.12.4", features = ["json", "rustls-tls"]}
chrono = "0.4.38"
base64 = "0.22.0"
tokio = { version = "1.37.0", features = ["full"] }
redis = { version = "0.25.3", features = ["tokio-comp", "json", "ahash", "connection-manager", "r2d2", "streams"] }
hex = "0.4.3"
arrayref = "0.3.7"
md-5 = "0.10.6"
anyhow = "1.0.82"
rand = "0.9.0-alpha.1"
log = "0.4.21"
log4rs = "1.3.0"
image = "0.25.1"
serde_yaml = "0.9.34"
ahash = "0.8.11"
redis-macros = "0.3.0"
async-trait = "0.1.80"
futures = "0.3.30"
minio-rsc = { version ="0.2.2", features = ["fs-tokio"]}
bytes = "1.6.0"
dashmap = { version = "5.5.3" , features = ["serde"] }
mimalloc = "0.1.41"
once_cell = "1.19.0"
gsc-crypt = { git = "https://github.com/putao520/rust-gsc-crypt"}
crossbeam-queue = "0.3.11"
urlencoding = "2.1.3"
calamine = "0.24.0"
regex = "1.10.4"
